# herd_mentality

./: .gitignore  README.md  docker-compose.yml  init-db.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedCounter.tsx  AuthModal.tsx  AutoTraderLive.tsx  ChartComponent.tsx  CombinedVotingLeaderboard.tsx  DeleteAccountModal.tsx  HerdPerformance.tsx  PerformanceHero.tsx  PollCandlestickChart.tsx  PortfolioHistory.tsx  ProfileDropdown.tsx  SocialButtons.tsx
frontend/src/contexts/: AuthContext.tsx  TradingContext.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: api.ts
frontend/src/types/: auth.ts  (+1 more)
python/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
python/api/: .env.example  README.md  main.py  notes.txt  requirements.txt  test_sse.py
python/api/app/api/v1/: api.py  bot_webhooks.py  polls.py  portfolio.py  sse.py
python/api/app/core/: config.py  redis_client.py
python/api/app/services/: kalshi_service.py  poll_scheduler.py  sse_manager.py
python/exchanges/: __init__.py
python/exchanges/kalshi/: __init__.py  authenticator.py
python/exchanges/kalshi/rest/: __init__.py  basic_rest.py  collections.py  communications.py  incentives.py  markets.py  milestones.py  portfolio.py  references.py  structured_targets.py
python/exchanges/kalshi/rest/models/: __init__.py  models.py
python/exchanges/kalshi/websocket/: __init__.py  basic_client.py
springboot_auth/: .env.example  Dockerfile  README.md
(+22 files in other folders)
