[project]
name = "prediction-investor"
version = "0.1.0"
description = "Investing in Prediction Markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "apscheduler>=3.11.1",
    "asyncio>=4.0.0",
    "cryptography>=46.0.3",
    "dataclasses>=0.8",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "fastapi>=0.120.2",
    "httpx>=0.28.1",
    "pip>=25.3",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "responses>=0.25.8",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "requests-mock>=1.11.0",
]
